--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@
     <script src="js/jquery.cookie.js"></script>
     <script src="js/jquery.countdown.min.js"></script>
     <script src="js/front.js"></script>
+    <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter46857105 = new Ya.Metrika({ id:46857105, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, ut:"noindex" }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/46857105?ut=noindex" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   </body>
 </html>
