--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
-      <video poster="./img/gdun.png" id="bgvid" playsinline autoplay muted loop>
+      <video poster="./img/preview.png" id="bgvid" playsinline autoplay muted loop>
         <source src="video/stockholm.mp4" type="video/mp4">
       </video>
     <div class="main"> 
