Change video to space

--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
-      <video poster="./img/preview.png" id="bgvid" playsinline autoplay muted loop>
-        <source src="video/stockholm.mp4" type="video/mp4">
+      <video poster="./img/space_preview.png" id="bgvid" playsinline autoplay muted loop>
+        <source src="./video/space.mp4" type="video/mp4">
       </video>
+      <audio autoplay>
+          <!-- <source src="audio/nirvana.ogg" type='audio/ogg; codecs=vorbis'> -->
+          <source src="audio/nirvana.mp3" type="audio/mpeg">
+       </audio>
     <div class="main"> 
       <div class="overlay"></div>
       <div class="container">
