--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
         </div>
         <!-- /.countdown-->
         <div class="quote">
-          <div class="quote-text">All of us make mistakes. The key is to acknowledge them, learn, and move on. The real sin is ignoring mistakes, or worse, seeking to hide them.</div>
-          <div class="quote-name">Robert Zoellick</div>
+            <img src="img/astronaut.png"/>
+          <div class="quote-text">The beginning of atonement is the sense of its necessity.</div>
+          <div class="quote-name">Lord Byron</div>
         </div>
       </div>
+     
       <div class="footer">
         <div class="container">
           <div class="row">
