--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <video poster="./img/space_preview.png" id="bgvid" playsinline autoplay muted loop>
         <source src="./video/space.mp4" type="video/mp4">
       </video>
-      <audio autoplay>
+      <audio autoplay loop>
           <!-- <source src="audio/nirvana.ogg" type='audio/ogg; codecs=vorbis'> -->
           <source src="audio/nirvana.mp3" type="audio/mpeg">
        </audio>
