--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
-      <video poster="./img/space_preview.png" id="bgvid" playsinline autoplay muted loop>
+      <!-- <video poster="./img/space_preview.png" id="bgvid" playsinline autoplay muted loop>
         <source src="./video/space.mp4" type="video/mp4">
-      </video>
-      <audio autoplay loop>
+      </video> -->
+      <audio  id="player" loop>
           <!-- <source src="audio/nirvana.ogg" type='audio/ogg; codecs=vorbis'> -->
-          <source src="audio/nirvana.mp3" type="audio/mpeg">
+          <source src="audio/mercy.mp3" type="audio/mpeg">
        </audio>
     <div class="main"> 
       <div class="overlay"></div>
@@ -62,11 +62,17 @@
           </div>
         </div>
         <!-- /.countdown-->
-        <div class="quote">
+        <!-- <div class="quote">
             <img src="img/astronaut.png"/>
           <div class="quote-text">The beginning of atonement is the sense of its necessity.</div>
           <div class="quote-name">Lord Byron</div>
-        </div>
+        </div> -->
+        <div class="quote">
+          <p class="quote-text" style="font-size: 44px">12 декабря</p>
+          <p class="quote-text">В этот день умер Иэн Эндрю Роберт Стюарт - клавишник и один из основателей группы <a>The Rolling Stones <div class="speaker"></div></a>.</p>
+          <p class="quote-text">А еще в этот день родился Эдвард Мунк - норвежский живописец, график, один из первых экспрессионистов (это его "Меланхолия" на фоне).</p>
+          <p class="quote-text">Но нечто особенно важное еще не произошло...</p>
+        </div> 
       </div>
      
       <div class="footer">
