--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <p class="quote-text" style="font-size: 44px">12 декабря</p>
           <p class="quote-text">В этот день умер Иэн Эндрю Роберт Стюарт - клавишник и один из основателей группы <a>The Rolling Stones <div class="speaker"></div></a>.</p>
           <p class="quote-text">А еще в этот день родился Эдвард Мунк - норвежский живописец, график, один из первых экспрессионистов (это его "Меланхолия" на фоне).</p>
-          <p class="quote-text">Но нечто особенно важное еще не произошло...</p>
+          <p class="quote-text">Но нечто по-настоящему важное еще не произошло...</p>
         </div> 
       </div>
      
