--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="quote">
           <p class="quote-text" style="font-size: 44px">12 декабря</p>
           <p class="quote-text">В этот день умер Иэн Эндрю Роберт Стюарт - клавишник и один из основателей группы <a>The Rolling Stones <div class="speaker"></div></a>.</p>
-          <p class="quote-text">А еще в этот день родился Эдвард Мунк - норвежский живописец, график, один из первых экспрессионистов (это его "Меланхолия" на фоне).</p>
+          <p class="quote-text">А еще в этот день родился Эдвард Мунк - норвежский живописец, график, один из первых экспрессионистов (да, это <a href="https://upload.wikimedia.org/wikipedia/commons/2/2c/Edvard_Munch_-_Melancholy_%281894-96%29.jpg?uselang=ru">его "Меланхолия"</a> на фоне, к слову их было несколько).</p>
           <p class="quote-text">Но нечто по-настоящему важное еще не произошло...</p>
         </div> 
       </div>
