--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
         <div class="row">
           <div class="col-sm-12">
             <h1 class="cursive"></h1>
-            <h2 class="sub">Ignoring in-progress</h2>
+            <br><br>
+            <h2 class="sub">Ignoring complete!</h2>
           </div>
         </div>
         <!-- countdown-->
-        <div id="countdown" class="countdown">
+        <!-- <div id="countdown" class="countdown">
           <div class="row">
             <div class="countdown-item col-sm-3 col-xs-6">
               <div id="countdown-days" class="countdown-number">&nbsp;</div>
@@ -60,20 +61,20 @@
               <div class="countdown-label">seconds</div>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- /.countdown-->
         <!-- <div class="quote">
             <img src="img/astronaut.png"/>
           <div class="quote-text">The beginning of atonement is the sense of its necessity.</div>
           <div class="quote-name">Lord Byron</div>
         </div> -->
-        <div class="quote">
+        <!-- <div class="quote">
           <p class="quote-text" style="font-size: 44px">12 декабря</p>
           <p class="quote-text">В этот день умер Иэн Эндрю Роберт Стюарт - клавишник и один из основателей группы <a>The Rolling Stones <div class="speaker"></div></a>.</p>
           <p class="quote-text">А еще в этот день родился Эдвард Мунк - норвежский живописец, график, один из первых экспрессионистов (да, это <a href="https://upload.wikimedia.org/wikipedia/commons/2/2c/Edvard_Munch_-_Melancholy_%281894-96%29.jpg?uselang=ru">его "Меланхолия"</a> на фоне, к слову их было несколько).</p>
           <p class="quote-text">Но нечто по-настоящему важное еще не произошло...</p>
         </div> 
-      </div>
+      </div> -->
      
       <div class="footer">
         <div class="container">
